tests/unit/language/errors/own_param_requires_move_or_copy.arche
// An `own` parameter takes ownership: a bare named arg is a compile error — the caller must
// say `move` (donate the binding) or `copy` (duplicate it).
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "must be moved or copied" %t.out
fill :: func(own b: char[8]) -> char[8] {
  b[0] = 'X';
  return b;
}

main :: proc() {
  buf: char[8];
  out := fill(buf);
}
